[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/VR/VrControllers.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.2, 0.2, 0.2 )

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 0.505882, 0.839216, 1, 1 )

[sub_resource type="CylinderMesh" id=3]
material = SubResource( 2 )
top_radius = 0.001
bottom_radius = 0.001
height = 1.0

[node name="OVRController" type="ARVRController"]
script = ExtResource( 1 )

[node name="Controller_mesh" type="MeshInstance" parent="."]

[node name="GrabPos" type="Position3D" parent="."]

[node name="PickupArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="PickupArea"]
shape = SubResource( 1 )

[node name="Pointer" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 0.131195, 0.991356, 0, -0.991356, 0.131195, 0, 0.0670286, -0.497479 )
visible = false

[node name="RayCast" type="RayCast" parent="Pointer"]
transform = Transform( 1, 0, 0, 0, 1, -2.98023e-008, 0, 2.98023e-008, 1, 0, 0.536635, 1.49012e-008 )

[node name="Laser" type="MeshInstance" parent="Pointer"]
mesh = SubResource( 3 )
material/0 = null
